--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,12 +6,10 @@ include_directories(${CMAKE_SOURCE_DIR}/External/Vulkan/include)
 include_directories(${CMAKE_SOURCE_DIR}/External/Glfw/include)
 include_directories(${CMAKE_SOURCE_DIR}/External/glm)
 AUX_SOURCE_DIRECTORY(. SRC_LIST)
-AUX_SOURCE_DIRECTORY(./Source SOURCE_LIST)
+AUX_SOURCE_DIRECTORY(${CMAKE_SOURCE_DIR}/Source SOURCE_LIST)
 foreach(target ${SOURCE_LIST})
 	list(APPEND SRC_LIST ${target})
 endforeach()
-list(APPEND SRC_LIST ${CMAKE_SOURCE_DIR}/External/FbxLoader/FBXFile.cpp)
-list(APPEND SRC_LIST ${CMAKE_SOURCE_DIR}/External/FbxLoader/FBXFile.h)
 ADD_EXECUTABLE(hello ${SRC_LIST})
 
 if (UNIX AND NOT APPLE)
