--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ include_directories(${CMAKE_SOURCE_DIR}/External/Vulkan/include)
 include_directories(${CMAKE_SOURCE_DIR}/External/Glfw/include)
 include_directories(${CMAKE_SOURCE_DIR}/External/glm)
 AUX_SOURCE_DIRECTORY(. SRC_LIST)
-AUX_SOURCE_DIRECTORY(${CMAKE_SOURCE_DIR}/Source SOURCE_LIST)
+FILE (GLOB SOURCE_LIST "./Source/*.cpp" "./Source/*.h")
 foreach(target ${SOURCE_LIST})
 	list(APPEND SRC_LIST ${target})
 endforeach()
