--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,8 +16,8 @@ FILE (GLOB SOURCE_LIST "./Source/*.cpp" "./Source/*.h")
 foreach(target ${SOURCE_LIST})
 	list(APPEND SRC_LIST ${target})
 endforeach()
-list(APPEND SRC_LIST "./AssetImporter/ImportAsset.h")
-list(APPEND SRC_LIST "./AssetImporter/ImportSceneData.h")
+list(APPEND SRC_LIST ${CMAKE_SOURCE_DIR}/AssetImporter/ImportAsset.h)
+list(APPEND SRC_LIST ${CMAKE_SOURCE_DIR}/AssetImporter/ImportSceneData.h)
 ADD_EXECUTABLE(hello ${SRC_LIST})
 
 if (UNIX AND NOT APPLE)
