fix various bugs. pipeline runnable.

--- a/AssetImporter/CMakeLists.txt
+++ b/AssetImporter/CMakeLists.txt
@@ -2,6 +2,7 @@ CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
 
 PROJECT(AssetImporter)
 
+set(CMAKE_CXX_STANDARD 17)
 FILE (GLOB SOURCE_LIST "./*.cpp" "./*.h")
 list (APPEND SOURCE_LIST ${CMAKE_SOURCE_DIR}/Source/Prefix.h)
 ADD_EXECUTABLE(importer ${SOURCE_LIST})
